<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.DetailUser">

    <TextView
        android:id="@+id/item_username"
        style="@style/tittle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/item_name"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_username"
        tools:text="@string/name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        tools:src="@tools:sample/avatars">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/item_company"
        style="@style/content_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/item_photo"
        app:layout_constraintStart_toStartOf="@+id/item_photo"
        app:layout_constraintTop_toBottomOf="@+id/item_photo"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/item_location"
        style="@style/content_small_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/item_company"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/item_company"
        app:layout_constraintTop_toBottomOf="@+id/item_company"
        tools:text="@string/location" />


    <TextView
        android:id="@+id/item_repository"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

    <TextView
        android:id="@+id/item_followers"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/item_repository"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

    <TextView
        android:id="@+id/item_following"
        style="@style/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/item_followers"
        app:layout_constraintTop_toBottomOf="@+id/item_location" />

    <TextView
        android:id="@+id/textView3"
        style="@style/content_small"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/followers"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/item_followers"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="@+id/item_followers"
        app:layout_constraintTop_toBottomOf="@+id/item_followers" />

    <TextView
        android:id="@+id/textView2"
        style="@style/content_small"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/item_following"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/item_following"
        app:layout_constraintTop_toBottomOf="@+id/item_following"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView"
        style="@style/content_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/item_repository"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/item_repository"
        app:layout_constraintTop_toBottomOf="@+id/item_repository"
        app:layout_constraintVertical_bias="0.074" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" />
    
    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

    </ProgressBar>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/favorite"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>